Fix dark icon problem, style scrollbars

--- a/src/style/buttons.less
+++ b/src/style/buttons.less
@@ -67,7 +67,7 @@
     a {
       background: @selectedButtonGradient;
       img {
-        filter: imgColorFilter(@darkBackgroundColor);
+        filter: @darkBackgroundImageFilter;
       }
     }
     &:hover a {
